# ansible-collection-apimon

./: .gitignore  .zuul.yaml  README.md  galaxy.yml  galaxy.yml.in  setup.cfg  test-requirements.txt
doc/: requirements.txt
doc/source/: conf.py  index.rst
playbooks/: install_epmon.yaml  install_executor.yaml  install_scheduler.yaml
roles/epmon/: README.md
roles/epmon/defaults/: main.yml
roles/epmon/handlers/: main.yml
roles/epmon/tasks/: main.yml
roles/epmon/templates/: apimon-epmon.service.j2  apimon.yaml  apimon.yaml.j2  apimon_epmon.service  apimon_secure.yaml.j2  env  logging.conf
roles/epmon/tests/: test.yml
roles/epmon/vars/: Debian.yaml  main.yml
roles/executor/: README.md
roles/executor/defaults/: main.yml
roles/executor/handlers/: main.yml
roles/executor/tasks/: firewall.yml  main.yml
roles/executor/templates/: apimon-executor.service.j2  apimon.yaml  apimon.yaml.j2  apimon_executor.service  env
roles/executor/tests/: test.yml
roles/executor/vars/: fedora.yml  main.yml
roles/scheduler/: README.md
roles/scheduler/defaults/: main.yml
roles/scheduler/handlers/: main.yml
roles/scheduler/tasks/: firewall.yml  main.yml
roles/scheduler/templates/: apimon-scheduler.service.j2  apimon.yaml  apimon.yaml.j2  apimon_scheduler.service  logging.conf
roles/scheduler/tests/: test.yml
roles/scheduler/vars/: Debian.yaml  main.yml
tests/: requirements.yml
tests/integration/: integration_config.yml
tests/integration/targets/epmon_role_verify/meta/: main.yaml
tests/integration/targets/epmon_role_verify/tasks/: main.yaml
(+4 files in other folders)
