[metadata]
name = ansible-collections-opentelekomcloud.apimon
summary = Ansible collections for apimon
description-file =
    README.md

author = opentelekomcloud
home-page = https://open.telekom.cloud
classifier =
    License :: OSI Approved :: Apache License
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    Intended Audience :: Information Technology
    Topic :: System :: Systems Administration
    Topic :: Utilities

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
data_files =
    share/ansible/collections/ansible_collections/opentelekomcloud/apimon/ = README.md
    share/ansible/collections/ansible_collections/opentelekomcloud/apimon/roles/ = roles/*
    share/ansible/collections/ansible_collections/opentelekomcloud/apimon/plugins/ = plugins/*
    share/ansible/collections/ansible_collections/opentelekomcloud/apimon/playbooks/ = playbooks/*
    share/ansible/collections/ansible_collections/opentelekomcloud/apimon/scripts/ = scripts/*
    share/ansible/collections/ansible_collections/opentelekomcloud/apimon/docs/ = docs/*
    share/ansible/collections/ansible_collections/opentelekomcloud/apimon/meta/ = meta/*

[wheel]
universal = 1

[pbr]
skip_authors = True
skip_changelog = True
